--- a/mainSPUDS.css
+++ b/mainSPUDS.css
@@ -27,9 +27,10 @@ body {
 /* Navigation menu*/
 .nav_bar {
 	padding: 10px;
-	height: 60px;
+	max-height: 60px;
 	margin-top: 10px;
 	float: left;
+	box-sizing: border-box;
 
 }
 
@@ -52,6 +53,7 @@ body {
 	margin-left: 50px;
 	margin-right: 50px;
     border: none;
+	box-sizing: border-box;
 
 }
 
@@ -75,6 +77,7 @@ body {
     text-align: center;
 	font-size: 120%;
 	z-index: 1;
+	box-sizing: border-box;
 }
 
 /* Change color of dropdown links on hover */
@@ -91,6 +94,7 @@ body {
 	background-color: white;
 	text-align: center;
 	padding: 10px 30px;
+	box-sizing: border-box;
 }
 
 .dropdown-submenu {
@@ -108,6 +112,7 @@ body {
 	margin-left: 50%;
 	margin-right: auto;
 	padding: 0 30px 10px 30px;
+	box-sizing: border-box;
 }
 
 .dropdown-submenu-content a {
@@ -133,7 +138,8 @@ body {
 	width: 850px; 
 	font-size: 250%; 
 	padding: 10px 0; 
-	margin-right: 15px;                                   
+	margin-right: 15px; 
+	box-sizing: border-box;	
 }
 
 /*Search */
@@ -158,15 +164,64 @@ body {
 /*Page */
 .site-main {
 	padding: 0 35px 0 35px;
+	box-sizing: border-box;
 }
 #primary {
 	float: left;
-    width: 80%;
+    width: 75%;
+	margin-bottom: 25px;
+	overflow: auto;
+	display: inline-block;
+	clear: both;
+	max-height: 70%;
 }
+
+.content-area {
+	position: relative;
+	float:left;
+	display: block;
+	margin-top: 20px;
+}
+	
+.hr_main{
+	height: 20px;
+	border-top: 1px solid red;
+	padding-left: 3%;
+	padding-right: 12%;
+	clear: none; 
+	position: relative; 
+
+}
+
+.hr_main a {
+	background-color: white; 
+	padding: 2px;
+	margin-left: 10%;
+	font-size: 15px;
+	color: black;
+	box-sizing: border-box;
+}
+
+.content{
+	display: block;
+	background:  #f2f2f2;
+	float: left;
+	margin-top: 20px;
+	padding: 10px;
+	box-sizing: border-box;
+}
+
+.content {
+	font-size: 12px;
+}
+
 #secondary {
 	display: block;
 	float: right;
-    width: 20%;	
+    width: 20%;
+	margin-left: 2%;	
+	box-sizing: border-box;
+	margin-top: 5%;
 }
 .sidebar-custom_el{
 }
@@ -175,37 +230,40 @@ body {
 	font-size: 13px;
 	line-height: 2em;
 	text-align: center;
+	box-sizing: border-box;
 }
 .text-tags{
 	margin-top: 15px;
 	line-height: 2em;
 	font-size: 13px;
 	color: black;
+	box-sizing: border-box;
 }
 	
 .tag-link{
 	font-size: 10px;
 }
 .menu{
-	display: block;
-	height: 80px;
-	margin: 0 80px 20px 80px;
+	display: inline-block;
+	width: 150px;
+	max-height: 80px;
+	margin: 0 30% 20px 30%;
+	text-align: center;
+	box-sizing: border-box;
 }
 .menu-button-text{
-	display: inline-block;
 	position: relative;
-	margin: auto;
 	text-align: center;
-	width: 25%;
+	max-width: 30%;
 	float: left;
-	padding: 25px;
 	color: black;
+	padding: 0 10% 0 10%;
 }
 
 /* Footer*/
 .site-footer{
 	max-width:100%;
-	height: 300px;
+	height: 28%;
 	/*background-color: #231f20;*/
 	clear: both;
 }
@@ -222,6 +280,7 @@ body {
 	margin-top: 15px;
 	text-align: center;
 	font-size: 15px;
+	box-sizing: border-box;
 
 	/*color: white;*/
 }
